<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:clickable="true"
              android:background="?android:attr/selectableItemBackground"
              tools:context=".RegistrodeActividad">

    <EditText
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:layout_height="wrap_content" android:id="@+id/etAsignatura"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" android:layout_marginTop="16dp" android:layout_marginBottom="8dp"
            android:hint="@string/hintAsignatura"/>
    <EditText
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/etCatedratico"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" android:layout_marginTop="16dp" android:layout_marginBottom="8dp"
            android:hint="@string/hintIdCatedratico"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_marginTop="8dp" android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" android:layout_marginBottom="16dp">
        <EditText
                android:inputType="textPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/etHora" android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAccent" android:textSize="22sp"
                android:hint="@string/hintHora"/>
        <EditText
                android:inputType="textPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/etAula" android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAccent" android:textSize="22sp"
                android:hint="@string/hintAula"/>
        <EditText
                android:inputType="textPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/etFechaRev" android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAccent" android:textSize="22sp"
                android:hint="@string/fecha"/>
        <EditText
                android:inputType="textPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/etregistro" android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAccent" android:textSize="22sp"
                android:hint="@string/registro"/>
    </LinearLayout>


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_marginTop="8dp" android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" android:layout_marginBottom="16dp">
        <Button
                android:text="@string/agregar_revisi_n"
                android:layout_width="336dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnAgregarRevision" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textSize="24sp"/>
    </LinearLayout>
</LinearLayout>
