<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" tools:background="#B0BEC5">

    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnAgregarCatedraticoMain"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:visibility="visible" android:textColorLink="@color/colorAccent"
            android:background="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" android:textSize="24sp"
            android:text="@string/agregar_catedratico"
            android:textColor="@color/colorWhite" tools:typeface="sans"
            android:fontFamily="sans-serif-condensed" app:layout_constraintEnd_toStartOf="@+id/btnAgregarClaseMain"
            android:layout_marginEnd="4dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnAgregarClaseMain"
            android:background="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" android:textSize="24sp"
            android:text="@string/agregar_asignatura"
            android:textColor="@color/colorWhite" android:typeface="sans"
            android:fontFamily="sans-serif-condensed"
            app:layout_constraintStart_toEndOf="@+id/btnAgregarCatedraticoMain" android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegistroactividadMain"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:background="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" android:textSize="30sp"
            android:textStyle="bold|italic" android:text="@string/realizar_revisi_n"
            android:textColor="@color/colorWhite" android:typeface="sans"
            android:fontFamily="sans-serif-condensed" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnAgregarClaseMain"/>
    <Button
            android:layout_width="180dp"
            android:layout_height="0dp"
            android:id="@+id/btnConsultaCatedratico"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:background="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" android:textSize="24sp"
            android:text="@string/consultar_catedraticos"
            android:textColor="@color/colorWhite" android:typeface="sans"
            android:fontFamily="sans-serif-condensed" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnRegistroactividadMain"
            app:layout_constraintEnd_toStartOf="@+id/btnConsultaClase" android:layout_marginEnd="4dp"/>
    <Button
            android:layout_width="180dp"
            android:layout_height="0dp"
            android:id="@+id/btnConsultaClase"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" android:textSize="24sp"
            android:text="@string/consultar_asignatura"
            android:textColor="@color/colorWhite" android:typeface="sans"
            android:fontFamily="sans-serif-condensed"
            app:layout_constraintStart_toEndOf="@+id/btnConsultaCatedratico" android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.375" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnRegistroactividadMain"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnConsultaRegistro" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnConsultaClase"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:background="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" android:textSize="30sp"
            android:textStyle="bold|italic" android:text="@string/consultar_revisi_n"
            android:textColor="@color/colorWhite" android:typeface="sans"
            android:fontFamily="sans-serif-condensed"/>
    <TextView
            android:text="BIENVENIDO AL CONTROL DE ASISTENCIA"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:id="@+id/textView"
            android:textSize="18sp"
            android:fontFamily="sans-serif" android:textStyle="bold" android:typeface="serif"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <ImageView
            android:layout_width="173dp"
            android:layout_height="183dp" app:srcCompat="@drawable/unicah_logo"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>